feat: added customizable error messages for velocity